--- a/Presentation/Legacy/Views/Web.config
+++ b/Presentation/Legacy/Views/Web.config
@@ -23,7 +23,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization" />
         <add namespace="System.Web.Routing" />
-        <add namespace="Challenging_Challenges" />
+        <add namespace="Presentation.Legacy" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
