--- a/Presentation/Legacy/Web.config
+++ b/Presentation/Legacy/Web.config
@@ -19,7 +19,6 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DefaultMainPageCount" value="10" />
     <add key="BusinessAddress" value="http://localhost:64242/" />
-    <!--<add key="BusinessAddress" value="http://ccbusiness.gear.host/" />-->
     <add key="TotalChallengesFetchedNumber" value="10" />
     <add key="SendGridMailAddress" value="smtp.sendgrid.net" />
     <add key="SendGridUserName" value="c.challenges" />
@@ -124,9 +123,9 @@
   </system.codedom>
   <system.serviceModel>
     <bindings>
-      <wsHttpBinding>
+      <basicHttpBinding>
         <binding openTimeout="00:05:00" closeTimeout="00:05:00" sendTimeout="00:05:00" receiveTimeout="00:05:00" />
-      </wsHttpBinding>
+      </basicHttpBinding>
     </bindings>
   </system.serviceModel>
 </configuration>
