--- a/.gitignore
+++ b/.gitignore
@@ -245,8 +245,8 @@ ModelManifest.xml
 .fake/
 
 # WebStorm settings
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
+**/.idea/workspace.xml
+**/.idea/tasks.xml
+**/.idea/dictionaries
+**/.idea/vcs.xml
+**/.idea/jsLibraryMappings.xml
