--- a/Business/Challenges/Business.Challenges.csproj
+++ b/Business/Challenges/Business.Challenges.csproj
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChallengesService.cs" />
+    <Compile Include="Exceptions\NoResultsException.cs" />
     <Compile Include="IChallengesService.cs" />
     <Compile Include="Mappings\ChallengesMapProfile.cs" />
     <Compile Include="Private\ChallengeSolutionDispatcher.cs" />
