--- a/Data/Challenges/Data.Challenges.csproj
+++ b/Data/Challenges/Data.Challenges.csproj
@@ -95,6 +95,10 @@
     <Compile Include="Migrations\201702171338327_AddFullTextIndexAndCatalog.Designer.cs">
       <DependentUpon>201702171338327_AddFullTextIndexAndCatalog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702280754401_AddLinkToChallengeToSolver.cs" />
+    <Compile Include="Migrations\201702280754401_AddLinkToChallengeToSolver.Designer.cs">
+      <DependentUpon>201702280754401_AddLinkToChallengeToSolver.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Context\IChallengesUnitOfWork.cs" />
@@ -139,6 +143,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Migrations\201702280754401_AddLinkToChallengeToSolver.resx">
+      <DependentUpon>201702280754401_AddLinkToChallengeToSolver.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Sql\AddFullTextIndexAndCatalog.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
