--- a/Presentation/Web/package.json
+++ b/Presentation/Web/package.json
@@ -47,6 +47,7 @@
     "preboot": "^4.5.2",
     "raw-loader": "^0.5.1",
     "rxjs": "5.1.0",
+    "simplemde": "^1.11.2",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.5",
     "typescript": "^2.0.3",
