--- a/Business/Challenges/Business.Challenges.csproj
+++ b/Business/Challenges/Business.Challenges.csproj
@@ -108,11 +108,13 @@
     <Compile Include="Private\SearchStrategies\SectionSearchStrategy.cs" />
     <Compile Include="Private\SearchStrategies\TagsSearchStrategy.cs" />
     <Compile Include="Private\SearchStrategies\TitleSearchStrategy.cs" />
+    <Compile Include="Private\SourceCodeTemplateCollector.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\BusinessSection.cs" />
     <Compile Include="ViewModels\ChallengeDetailsModel.cs" />
     <Compile Include="ViewModels\ChallengeSearchType.cs" />
     <Compile Include="ViewModels\ChallengeSolveResult.cs" />
